--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,5 @@
- <div class="jumbotron">
-		<h1>About Us</h1>
-		<p>We thought you would like to know all about us so the stuff below helps with that</p>
-</div>
+ 
+
  <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,38 +9,61 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
   </head>
 
-    <!-- Marketing messaging and featurettes
+<body>
+ <!-- Carousel
     ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="http://thriftyvinyl.files.wordpress.com/2011/09/img_2097.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Old School Band That Was Pretty Good</h1>
+              <p>Apparently Wearing Fur Was Rad Back Then</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Buy Fur Coats Here</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="http://thriftyvinyl.files.wordpress.com/2011/09/img_2096.jpg" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>There Were Three Members...Or Were There Four?</h1>
+              <p>Sometimes The Fourth Guy Feels Left Out and Watches From the Door</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="http://floridatheatre.com/assets/Crosby+Stills+Nash++Young+_CSNY_2.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Everyone Gets Old</h1>
+              <p>But Long White Hair and Handlebar Mustaches Never Do</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- /.carousel -->
+<hr class="featurette-divider">
 
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <img class="img-circle" src="http://upload.wikimedia.org/wikipedia/commons/6/6e/Crosby%2C_Stills_%26_Nash%21_%287960728758%29.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Crosby</h2>
           <p>Crosby is one of the best people at this thing we do.</p>
           <p><a class="btn btn-default" href="#" role="button">Detailed Bio &raquo;</a></p>
@@ -88,4 +109,4 @@
         </div>
       </div>
 
-      <!-- /END THE FEATURETTES -->
+      </body>
