--- a/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
@@ -1,6 +1,14 @@
-$body-bg:		#95a5a6;
-$navbar-inverse-bg: #2c3e50;
-$navbar-inverse-link-color: white;
+$body-bg:			#ecf0f1;
+$navbar-default-bg: 	white;
+$navbar-default-brand-color: #c0392b;
+$navbar-inverse-link-color: #c0392b;
 $brand-primary: #2980b9;
-$jumbotron-bg: #ecf0f1;
+$jumbotron-bg: white;
 @import 'bootstrap';
+.center {
+text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
