--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <div class="jumbotron center">
 		<h1>Welcome to my app</h1>
+	<% if user_signed_in? %>
+	Welcome Back!
+	<% else %>	
 		<p>
-			<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
-			<%= link_to "Log In", "#", class: "btn btn-primary btn-lg" %>
+			<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+			<%= link_to "Log In",new_user_session_path, class: "btn btn-primary btn-lg" %>
 		</p>
+<% end %>
 </div>
