added pins and cleaned up scaffold

--- a/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
@@ -1,4 +1,4 @@
-$body-bg:			#ecf0f1;
+$body-bg:			white;
 $navbar-default-bg: 	white;
 $navbar-default-brand-color: #c0392b;
 $navbar-inverse-link-color: #c0392b;
