--- a/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.ccs.scss
@@ -1,8 +1,8 @@
-$body-bg:			white;
+$body-bg:			#ecf0f1;
 $navbar-default-bg: 	white;
 $navbar-default-brand-color: #c0392b;
 $navbar-inverse-link-color: #c0392b;
-$brand-primary: #2980b9;
+$brand-primary: #c0392b;
 $jumbotron-bg: white;
 @import 'bootstrap';
 .center {
